@@ -8,24 +8,35 @@
     <version>0.1-SNAPSHOT</version>
   </parent>
   <artifactId>yatta</artifactId>
+  <properties>
+    <jar.dir>${project.build.directory}/jars</jar.dir>
+    <test.argLine>--upgrade-module-path=${jar.dir}/truffle-api.jar --add-opens org.graalvm.sdk/org.graalvm.polyglot=ALL-UNNAMED</test.argLine>
+  </properties>
   <build>
     <plugins>
       <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.22.1</version>
+        <version>2.22.2</version>
         <configuration>
+          <argLine>-Dgraalvm.locatorDisabled=true ${test.argLine}</argLine>
           <includes>
             <include>**/*TestSuite.java</include>
             <include>**/*Test.java</include>
           </includes>
-          <argLine>-XX:-UseJVMCIClassLoader</argLine>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-eclipse-plugin</artifactId>
+        <configuration>
+          <downloadSources>true</downloadSources>
+          <downloadJavadocs>true</downloadJavadocs>
         </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-shade-plugin</artifactId>
-        <version>3.1.1</version>
+        <version>3.2.1</version>
         <executions>
           <execution>
             <phase>package</phase>
@@ -68,11 +79,11 @@
     <pluginManagement>
       <plugins>
         <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.1</version>
+          <version>3.8.1</version>
           <configuration>
-            <source>1.8</source>
-            <target>1.8</target>
+            <release>11</release>
           </configuration>
         </plugin>
       </plugins>
